progress bar mode and dentist required issue fixed

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -70,6 +70,6 @@
     </nav>
   </div>
   <mat-progress-bar *ngIf="(loader.isLoading$ | async)"
-    [mode]="(loader.requestType$ | async) === 'GET'? 'query': 'indeterminate'">
+    [mode]="modeType">
   </mat-progress-bar>
 </div>
