--- a/src/app/shared/templates/snack-bar-component.html
+++ b/src/app/shared/templates/snack-bar-component.html
@@ -2,5 +2,5 @@
      {{data.message}}
 </span>
 <span matSnackBarActions>
-     <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">❌</button>
+     <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()"><i class="fa fa-remove text-white"></i></button>
 </span>
