--- a/src/app/modules/website-manager/dentists/dentist-modal/dentist-modal.component.html
+++ b/src/app/modules/website-manager/dentists/dentist-modal/dentist-modal.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title style="margin: 0;">
     {{data? 'Update': 'Create'}} Dentist
-    <button [mat-dialog-close]="true" class="close mt-1 text-white" data-dismiss="modal" type="button">
+    <button mat-dialog-close class="close mt-1 text-white" data-dismiss="modal" type="button">
         <span aria-hidden="true">×</span>
     </button>
 </h2>
@@ -46,7 +46,7 @@
                 </nz-form-item>
             </div>
             <div class="col-md-12">
-                <nz-form-label nzRequired nzFor="phone">Phone</nz-form-label>
+                <nz-form-label nzFor="phone">Phone</nz-form-label>
                 <nz-form-item>
                     <nz-form-control nzHasFeedback [nzErrorTip]="phoneErrorTemplate">
                         <input nz-input type="text" formControlName="phone" id="phone" placeholder="Enter phone" />
@@ -62,7 +62,7 @@
                 </nz-form-item>
             </div>
             <div class="col-md-12">
-                <nz-form-label nzRequired nzFor="email">Email</nz-form-label>
+                <nz-form-label nzFor="email">Email</nz-form-label>
                 <nz-form-item>
                     <nz-form-control nzHasFeedback [nzErrorTip]="emailErrorTemplate">
                         <input nz-input type="email" formControlName="email" id="email" placeholder="Enter email" />
@@ -132,7 +132,7 @@
     </mat-dialog-content>
 
     <mat-dialog-actions align="end">
-        <button [mat-dialog-close]="true" class="me-2" mat-raised-button>
+        <button mat-dialog-close class="me-2" mat-raised-button>
             <i class="icofont icofont-close-line"></i>
             Close
         </button>
