--- a/src/app/modules/invoice-management/invoice-lists/invoice-form-modal/invoice-form-modal.component.scss
+++ b/src/app/modules/invoice-management/invoice-lists/invoice-form-modal/invoice-form-modal.component.scss
@@ -18,7 +18,7 @@
 }
 
 .invoice-address {
-    border-top: 3px double #000000;
+    border-top: 3px double #ddd;
     margin: 20px 0;
     padding-top: 20px;
 }
