--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,45 +2,45 @@
 height: 100vh;">
     <div class="container">
         <div class="login-panel">
-            <form [formGroup]="userLoginForm" (ngSubmit)="submitLoginForm()">
+            <form [formGroup]="userLoginForm" (ngSubmit)="submitLoginForm()" autocomplete="off">
                 <div class="login-form-logo">
                     <img src="./assets/img/login-image.png" alt="logo">
                 </div>
                 <div class="login-text">
-                    Login
+                    LOGIN
                 </div>
                 <mat-card-content>
                     <div class="login-container">
+                        <div *ngIf="failedMessage"
+                            class="alert alert-danger d-flex justify-content-between align-items-center">
+                            <p>{{failedMessage}}</p>
 
-                        <div *ngIf="loginError" class="alert alert-danger alert-dismissible fade show" role="alert">
-                            {{failedMessage}}
-                            <button type="button" class="close">
-                                <span aria-hidden="true">&times;</span>
+                            <button nz-button nzShape="circle" (click)="this.failedMessage = ''">
+                                <span nz-icon nzType="close" nzTheme="outline"></span>
                             </button>
                         </div>
                         <div class="login-form">
                             <mat-form-field appearance="outline">
-                                <input matInput placeholder="Email or Username " formControlName="email" required>
-                                <mat-error class="error" *ngIf="userNameFormControl.hasError('required')">
-                                    <i class="fa fa-exclamation-circle me-2"></i>
-                                    Email or Username is <strong>required!</strong>
+                                <input matInput placeholder="Email or Username" formControlName="email">
+                                <mat-error>
+                                    Email or Username is required!
                                 </mat-error>
                             </mat-form-field>
                         </div>
                         <div class="login-form">
                             <mat-form-field appearance="outline">
-                                <input matInput placeholder="Password" type="password" formControlName="password"
-                                    autocomplete="off" required>
-                                <mat-error *ngIf="userPasswordControl.hasError('required')"><i
-                                        class="fa fa-exclamation-circle me-2"></i>Password is
-                                    <strong>required!</strong></mat-error>
+                                <input matInput placeholder="Password" type="password" formControlName="password">
+                                <mat-error>
+                                    Password is required!
+                                </mat-error>
                             </mat-form-field>
                         </div>
                     </div>
                 </mat-card-content>
                 <mat-progress-bar mode="indeterminate" class="mb-2" *ngIf="showLoader"></mat-progress-bar>
                 <mat-card-actions class="submit-button">
-                    <button mat-raised-button [disabled]="userLoginForm.invalid || showLoader" class="w-100" color="primary">
+                    <button mat-raised-button [disabled]="userLoginForm.invalid || showLoader" class="w-100"
+                        color="primary">
                         <mat-icon class="me-2">login</mat-icon>
                         Login
                     </button>
@@ -49,7 +49,7 @@ height: 100vh;">
                     </p>
                     <p class="mt-3 copyright-text">
                         Copyright &copy; {{currentYear | date: 'yyyy'}}
-                        <a routerLink="/">DR. REYAD DENTAL PERFECTION</a>. <br/> All rights reserved.
+                        <a routerLink="/">DR. REYAD DENTAL PERFECTION</a>. <br /> All rights reserved.
                     </p>
                 </mat-card-actions>
             </form>
