product order modal issue and book date validation

--- a/src/app/modules/system-admin/create-user/create-user-add-edit.html
+++ b/src/app/modules/system-admin/create-user/create-user-add-edit.html
@@ -150,7 +150,7 @@
                     </nz-form-label>
                     <nz-form-control>
                         <nz-switch [ngModel]="true" nzCheckedChildren="Active" nzUnCheckedChildren="In-active"
-                                   [(ngModel)]="data.status" (ngModelChange)="changeStatus($event)"
+                                   [(ngModel)]="data.status"
                                    name="status"></nz-switch>
                     </nz-form-control>
                 </nz-form-item>
