--- a/src/app/modules/website-frontend/product-orders/product-orders.component.html
+++ b/src/app/modules/website-frontend/product-orders/product-orders.component.html
@@ -7,7 +7,7 @@
                         <h4 class="card-title">Website Orders</h4>
                         <button nz-button (click)="addOrder()" nzType="default">
                             <i class="fa fa-plus me-2"></i>
-                            Add Order
+                            Place Order
                         </button>
                     </div>
                     <div class="card-body">
