--- a/src/app/modules/website-frontend/product-orders/make-order-modal/make-order-modal.component.html
+++ b/src/app/modules/website-frontend/product-orders/make-order-modal/make-order-modal.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title class="m-0">
-    {{data? 'Update': 'Make'}} Order
+    {{data? 'Update': 'Place'}} Order
     <button (click)="closeModal()" class="close mt-1 text-white" data-dismiss="modal" type="button">
         <span aria-hidden="true">×</span>
     </button>
@@ -10,8 +10,8 @@
         <div class="row">
             <div class="col-md-12 mb-2">
                 <nz-radio-group formControlName="order_type" nzName="radiogroup">
-                    <label nz-radio [nzValue]="1">Online</label>
-                    <label nz-radio [nzValue]="2">Offline</label>
+                    <label nz-radio [nzDisabled]="!!data" [nzValue]="1">Online</label>
+                    <label nz-radio [nzDisabled]="!!data" [nzValue]="2">Offline</label>
                 </nz-radio-group>
             </div>
             <div class="col-md-12">
@@ -190,7 +190,7 @@
         </button>
         <button type="submit" [disabled]="makeOrderForm.invalid || isDisabled" color="primary" mat-raised-button>
             <i class="icofont icofont-save"></i>
-            {{data? 'Update': 'Make'}} Order
+            {{data? 'Update': 'Place'}}
         </button>
 
     </mat-dialog-actions>
